@startuml classDiagram
skinparam classAttributeIconSize 0
class Ability {
  -atack: int
  -defense: int
  -velocity: int
  +getAttack():int
  +getDefense():int
  +getVelocity():int
}
class AbilityArcher {
  -range: int
  +getRange():int
}
class AbilityInfantry {
  -hardness: int
  +getHardness():int
}
class AbilityMagician {
  -invisibility: int
  +getInvisibility():int
}
AbilityArcher -- Ability
AbilityInfantry -- Ability
AbilityMagician -- Ability

abstract class Hero{
  -name: string
  -aparience: string
  -experience: int
  -level: int
  -health: int
  +clone() abstract
  +getAbility() abstract
  +setName(string)
  +setAparience(string)
  +getName():string
  +getAparience():string
  +getExperience():int
  +getLevel():int
}
class HeroArcher {
  -ability: AbilityArcher
  -arctype: string
  +clone():Hero
  +getAbility():Ability
}
class HeroInfantry {
  -ability: AbilityInfantry
  -infantrytype: string
  +clone():hero
  +getAbility():Ability
}
class HeroMagician {
  -ability: AbilityMagician
  -magiciantype: string
  +clone():hero
  +getAbility():Ability
}
Hero -- HeroArcher
Hero -- HeroInfantry 
Hero -- HeroMagician

HeroArcher *-- AbilityArcher
HeroInfantry *-- AbilityInfantry
HeroMagician *-- AbilityMagician
@enduml